--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
 	<!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 	<link rel="stylesheet" href="style.css">
+	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 
 	<!-- jQuery library -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -34,6 +35,9 @@
 					<a href="index.html" class="nav-link"><b>Home</b></a>
 				</li>
 				<li class="nav-item nav-res">
+					<a href="about.html" class="nav-link" id="active"><b>About</b></a>
+				</li>
+				<li class="nav-item nav-res">
 					<a href="lyric.html" class="nav-link"><b>Lyrics</b></a>
 				</li>
 				<li class="nav-item nav-res">
@@ -48,9 +52,6 @@
 				<li class="nav-item nav-res">
 					<a href="index.html#video" class="nav-link"><b>Video</b></a>
 				</li>
-				<li class="nav-item nav-res">
-					<a href="about.html" class="nav-link" id="active"><b>About</b></a>
-				</li>
 
 				<li class="nav-item dropdown">
 			      <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
@@ -58,12 +59,13 @@
 			      </a>
 			      <div class="dropdown-menu">
 			        <a class="dropdown-item" href="index.html">Home</a>
+			        <a class="dropdown-item" href="about.html"  id="active2">About</a>
 			         <a class="dropdown-item" href="lyric.html">Lyrics</a>
 			        <a class="dropdown-item" href="index.html#album">Album</a>
 			        <a class="dropdown-item" href="index.html#event">Event</a>
 			        <a class="dropdown-item" href="index.html#quotes">Quotes</a>
 			        <a class="dropdown-item" href="index.html#video">Video</a>
-			         <a class="dropdown-item" href="about.html"  id="active2">About</a>
+			         
 			      </div>
 			    </li>
 			</ul>
