--- a/about.html
+++ b/about.html
@@ -101,9 +101,10 @@
 				
 			</div>
 			<div class="col-sm-8 the-box-about p-5">
-				<h1>Gamila Arief</h1>
+				<h1>Gamila Mustika Burhan</h1>
 				<br>
 				<p>Genre : POP</p>
+				<p>Tanggal lahir : 18 November 1980</p>
 				<p>Label Rekaman : Gamila Arief</p>
 				<p>Album : Gamila FM, Ogituyamil, Gamila F.M. (Skits)</p>
 				<div class="medsos pa mt-3 color-grey">
@@ -112,6 +113,37 @@
 					<a href="https://www.instagram.com/gamilaarief/?hl=en" target="_blank"><i class="fa fa-instagram"></i></a>
 					<a href="https://www.youtube.com/user/gamilaarief" target="_blank"><i class="fa fa-youtube-play"></i></a>
 				</div>
+			</div>
+			<div class="col-sm-12 pt-5">
+				<p>
+					Terlahir di Braunschweig, 18 November 1980 dengan nama Gamila Mustika Burhan, Gamila Arief datang dari keluarga yang bukan musisi namun dengan hasrat bernyanyi sangat tinggi. Sudah hafal album Lionel Richie, Nena (99 Luftballons), lagu-lagu Carole King, ABBA, dan The Beatles sejak usia dua tahun.
+				</p>
+				<p>
+					Pada sekitar 2004-2005, Gamila menjadi Additional backing vocals La Luna & menjadi Featuring dalam lagu “Save The Orphans” milik Rocket Rockers
+				</p>
+				<p>
+					Gamila kemudian mengisi Album The Broadcasters. Project untuk lagu Kembali Ke Masa Lalu (dengan Ichsan Akbar), This is Me (All Artists), This Love Will Break My Heart (bersama Yarra Aristi dan Radhini
+				</p>
+				<p>
+					Memberanikan diri untuk membuat lagu sendiri secara komersil, Gamila melepas Changes sebagai bonus track di dalam album Pandji Pragiwaksono-Merdesa, tahun 2010.
+				</p>
+				<p>
+					Gamila juga featuring dalam album-album musik Pandji Pragiwaksono dalam kurun tahun 2008-2012 untuk lagu:
+				</p>
+				<ol>
+					<li>You Think You Know (Indonesia)</li>
+					<li>Baby Plum</li>
+					<li>Calvin and Susy</li>
+					<li>Beberapa skit di album Press Play</li>
+					<li>Was Here</li>
+					<li>Selamanya</li>
+				</ol>
+				<p>
+					<div class="riwayat">2010 bekerja sama dengan produser Rifka Rachman.</div>
+					<div class="riwayat">Mengeluarkan single Indonesian Girl pada 2011.</div>
+					<div class="riwayat">Lalu video clip pada tahun 2014.</div>
+					<div class="riwayat">Berniat merampungkan albumnya pada 2014 akhir untuk dinikmati oleh publik yang berminat pada eklektisme, jazz, dan folk.</div>
+				</p>
 			</div>
 		</div>
 	</main>
